# PIO-UART-RP2040

./: CMakeLists.txt  README.md  main.c
pio_uart/: CMakeLists.txt  uart_pio.c  uart_rx.pio  uart_tx.pio
pio_uart/include/: uart_pio.h
